--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     </head>
     <body>
         <h1>인사이트 InjSite</h1>
-        <h2>아메리카노</h2>
-        <h2>인사이트에 대한 설명</h2>
-        <h2>인사이트에 대한 설명</h2>
+        <h2>컴퓨터 공학과 Tel : 055-320-3269</h2>
+        <h2>학부 이메일 : cshouse@inje.ac.kr</h2>
+        <h2>교수진 이메일</h2>
+        <p>
+            김태공 교수 : sun@inje.ac.kr
+            박세명 교수 : cssmpark@inje.ac.kr
+            서재현 교수 : jaiseu@inje.ac.kr
+            김상균 교수 : skkim@inje.ac.kr
+            김태완 교수 : twkim@inje.ac.kr
+            김평 교수 : pkim@inje.ac.kr
+        </p>
         <img src="./image/bus2.png" align="right">
     </body>
 </html>
