--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         <h2>학부 이메일 : cshouse@inje.ac.kr</h2>
         <h2>교수진 이메일</h2>
         <p>
-            김태공 교수 : sun@inje.ac.kr
-            박세명 교수 : cssmpark@inje.ac.kr
-            서재현 교수 : jaiseu@inje.ac.kr
-            김상균 교수 : skkim@inje.ac.kr
-            김태완 교수 : twkim@inje.ac.kr
-            김평 교수 : pkim@inje.ac.kr
+            김태공 교수 : sun@inje.ac.kr<br>
+            박세명 교수 : cssmpark@inje.ac.kr<br>
+            서재현 교수 : jaiseu@inje.ac.kr<br>
+            김상균 교수 : skkim@inje.ac.kr<br>
+            김태완 교수 : twkim@inje.ac.kr<br>
+            김평 교수 : pkim@inje.ac.kr<br>
         </p>
         <img src="./image/bus2.png" align="right">
     </body>
