--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     </head>
     <body>
         <h1>인사이트 InjSite</h1>
-        <h2>컴퓨터 공학과 Tel&오픈채팅방 : 055-320-3269 <a href=https://open.kakao.com/o/gx1rCU5f></a></h2>
+        <h2>컴퓨터 공학과 Tel&오픈채팅방 : 055-320-3269 </h2>
+        <p>
+            <a href=https://open.kakao.com/o/gx1rCU5f></a>
+        </p>
         <h2>학부 이메일 : cshouse@inje.ac.kr</h2>
         <h2>교수진 이메일</h2>
         <p>
