--- a/index.html
+++ b/index.html
@@ -5,20 +5,28 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>인사이트 InjSite</h1>
-        <h2>
-            컴퓨터 공학과 Tel&오픈채팅방 : 055-320-3269 
-            <a href=https://open.kakao.com/o/gZbgx36e>@kakaotalk</a> </h2>
-        <h2>학부 이메일 : cshouse@inje.ac.kr</h2>
-        <h2>교수진 이메일</h2>
-        <p>
-            김태공 교수 : sun@inje.ac.kr<br>
-            박세명 교수 : cssmpark@inje.ac.kr<br>
-            서재현 교수 : jaiseu@inje.ac.kr<br>
-            김상균 교수 : skkim@inje.ac.kr<br>
-            김태완 교수 : twkim@inje.ac.kr<br>
-            김평 교수 : pkim@inje.ac.kr<br>
-        </p>
+        <div>
+            <h1>InjSite 인사이트</h1>
+        </div>
+        <div>
+            <h2>
+                컴퓨터 공학과 Tel&오픈채팅방 : 055-320-3269 
+                <a href=https://open.kakao.com/o/gZbgx36e>@kakaotalk</a> </h2>
+        </div>
+        <div>
+            <h2>학부 이메일 : cshouse@inje.ac.kr</h2>
+        </div>
+        <div>
+            <h2>교수진 이메일</h2>
+            <p>
+                김태공 교수 : sun@inje.ac.kr<br>
+                박세명 교수 : cssmpark@inje.ac.kr<br>
+                서재현 교수 : jaiseu@inje.ac.kr<br>
+                김상균 교수 : skkim@inje.ac.kr<br>
+                김태완 교수 : twkim@inje.ac.kr<br>
+                김평 교수 : pkim@inje.ac.kr<br>
+            </p>
+        </div>
         <img src="./image/bus2.png" align="right">
     </body>
 </html>
