--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 김평 교수 : pkim@inje.ac.kr<br>
             </p>
         </div>
+        <img src="./image/map.png" align="right">
         <img src="./image/bus2.png" align="right">
     </body>
 </html>
