--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <div>
             <h2>
                 컴퓨터 공학과 Tel&오픈채팅방 : 055-320-3269 
-                <a href=https://open.kakao.com/o/gZbgx36e>@kakaotalk</a> </h2>
+                <a href=https://open.kakao.com/o/gZbgx36e>@kakaotalk</a>
+                <img src="./image/map.png" align="right">
+            </h2>
         </div>
         <div>
             <h2>학부 이메일 : cshouse@inje.ac.kr</h2>
@@ -27,7 +29,6 @@
                 김평 교수 : pkim@inje.ac.kr<br>
             </p>
         </div>
-        <img src="./image/map.png" align="right">
         <img src="./image/bus2.png" align="right">
     </body>
 </html>
