--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
             </h2>
         </div>
         <div>
-            <h2>학부 이메일 : cshouse@inje.ac.kr</h2>
+            <h2>학부 이메일 </h2>
+            <p style="text-align: center;">
+                cshouse@inje.ac.kr
+            </p>
         </div>
         <div>
             <h2>교수진 이메일</h2>
-            <p>
+            <p style="text-align:center;">
                 김태공 교수 : sun@inje.ac.kr<br>
                 박세명 교수 : cssmpark@inje.ac.kr<br>
                 서재현 교수 : jaiseu@inje.ac.kr<br>
