--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
             <h1>InjSite 인사이트</h1>
         </div>
         <div>
-            <h2>
-                컴퓨터 공학과 Tel&오픈채팅방 : 055-320-3269 
-                <a href=https://open.kakao.com/o/gZbgx36e>@kakaotalk</a>
+            <h2>컴퓨터 공학과 Tel&open kakaoTalk </h2>
+            <p>
+                <a href=https://open.kakao.com/o/gZbgx36e>055-320-3269 @kakaotalk</a>
                 <img src="./image/map.png" align="right">
-            </h2>
+            </p>
         </div>
         <div>
             <h2>학부 이메일 </h2>
